# manhattan_project

./: .gitignore  CMakeLists.txt  README.md
common/: ai_base.cpp
geom/geom/: angle_deg.cpp  circle_2d.cpp  polygon_2d.cpp  ray_2d.cpp  rect_2d.cpp  rect_2d.h  segment_2d.cpp
geom/include/: angle_deg.h  circle_2d.h  rect_2d.h  sector_2d.h
geom/src/: circle_2d.cpp  convex_hull.cpp  line_2d.cpp  matrix_2d.cpp  polygon_2d.cpp  rect_2d.cpp  sector_2d.cpp  triangle_2d.cpp  vector_2d.cpp
parsian/: CMakeLists.txt
parsian/include/: ai.h  control.h  dataStructure.h  knowledge.h  myprotobuf.h  pid.h  soccer.h
parsian/include/strategy/: coach.h  defence.h  goalie.h  playmake.h  support.h
parsian/src/: soccer.cpp
proto/: messages_parsian_worldmodel.pb.cc  messages_parsian_worldmodel.pb.h  messages_parsian_worldmodel.proto
soccer/include/: field.h  gamestate.h  pid.h  ploterProtobuf.h  soccer.h  worldmodel.h
soccer/src/: coach.cpp  control.cpp  field.cpp  main.cpp  ploterProtobuf.cpp  soccer.cpp
soccer/src/roles/: attacker.cpp  defense.cpp  gk.cpp  position.cpp
soccer/src/skills/: fast.cpp  kick.cpp  move.cpp
